# regen

./: .gitignore  Pipfile  README.md  pyproject.toml  regen.py  requirements.txt  requirements_dev.txt  requirements_doc.txt
doc/: interrupt.rst
docs/: brief.rst  conf.py  details.rst  index.rst  installation.rst  interrupt.rst  quickstart.rst
regen/: __init__.py  __main__.py  base.py  drc.py  elements.py  io.py  log.py  logging.py  model.py  regen.py  rmap.py
regen/templates/: axi4l.sv.j2  axi4l.v.j2  bram.v.j2  c_header.h.j2  plain.txt.j2  systemverilog.sv.j2  vhdl.vhd.j2
templates/: axi4l.sv.j2  c_header.h.j2
test/: axi_gpio_regs.json  simple_gpio.json  test_simple_gpio.py
tests/: gpio_interrupt.json  simple_gpio.json  test_base.py  test_gpio_interrupt.py  test_regen.py  test_simple_gpio.py  test_template.py
tests/output/: gpio_interrupt.sv
