[tool.poetry]
name = "regen"
version = "0.1.1-alpha.0"
description = "Tool for automatically generating HDL register slave module"
authors = ["Michiru Morishita <kokser.merio@gmail.com>"]
license = "GPLv3"
readme = "README.md"

homepage = "https://github.com/kele14x/regen"
repository = "https://github.com/kele14x/regen"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[tool.poetry.urls]
"Tracker" = "https://github.com/kele14x/regen/issues"

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
sphinx = "^3.0"
flake8 = "^3.8"
pylint = "^2.8"

[tool.poetry.scripts]
regen = "regen.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
